@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.148 2005/06/06 19:23:03 tom Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.149 2005/06/07 10:41:26 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -86,6 +86,15 @@ TK/07 MBOX spool code: Add X-Envelope-From: and X-Envelope-To: headers.
       The latter is generated from $received_to and is only set if the
       message has one envelope recipient. SA can use these headers,
       obviously out-of-the-box. Patch from Alex Miller.
+
+PH/08 The ${def test on a variable was returning false if the variable's
+      value was "0", contrary to what the specification has always said!
+      The result should be true unless the variable is empty.
+
+PH/09 The syntax error of a character other than { following "${if
+      def:variable_name" (after optional whitespace) was not being diagnosed.
+      An expansion such as ${if def:sender_ident:{xxx}{yyy}} in which an
+      accidental colon was present, for example, could give incorrect results.
 
 
 Exim version 4.51
